--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,18 @@
 Package: checkr
 Title: Check R
-Version: 0.0.1.9003
-Date: 2018-01-03
+Version: 0.0.1.9004
+Date: 2018-01-06
 Authors@R: person("Joe", "Thorley", email = "joe@poissonconsulting.ca", role = c("aut", "cre"))
 Description: Informatively checks the dimensions, classes, values, and names of 
     scalar, vectors, lists and data frames.
 License: MIT + file LICENSE
 URL: https://github.com/poissonconsulting/checkr
 BugReports: https://github.com/poissonconsulting/checkr/issues
-Depends: R (>= 3.0.0)
-Suggests: covr,
+Depends: 
+    R (>= 3.0.0),
+    lazyeval
+Suggests: 
+    covr,
     magrittr,
     tibble,
     testthat
